# ChangeLog for dev-ruby/json
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.102 2013/01/28 15:15:43 aballier Exp $

  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> json-1.7.6.ebuild:
  keyword ~amd64-fbsd

*json-1.7.6 (06 Jan 2013)

  06 Jan 2013; Hans de Graaff <graaff@gentoo.org> +json-1.7.6.ebuild:
  Version bump.

  06 Nov 2012; Jeroen Roovers <jer@gentoo.org> json-1.6.7.ebuild:
  Stable for HPPA (bug #411507).

  27 Oct 2012; Raúl Porcel <armin76@gentoo.org> json-1.6.7.ebuild:
  s390/sh stable wrt #411507

  21 Oct 2012; Raúl Porcel <armin76@gentoo.org> json-1.6.7.ebuild:
  alpha/ia64/sparc stable wrt #411507

*json-1.7.5 (21 Aug 2012)

  21 Aug 2012; Hans de Graaff <graaff@gentoo.org> +json-1.7.5.ebuild:
  Version bump.

  15 Aug 2012; Anthony G. Basile <blueness@gentoo.org> json-1.6.7.ebuild:
  Stable ppc ppc64, bug #428756

  11 Aug 2012; Markus Meier <maekke@gentoo.org> json-1.6.7.ebuild:
  arm stable, bug #428756

  04 Aug 2012; Markos Chandras <hwoarang@gentoo.org> json-1.6.7.ebuild:
  Stable on amd64 wrt bug #428756

  31 Jul 2012; Jeff Horelick <jdhore@gentoo.org> json-1.6.7.ebuild:
  marked x86 per bug 428756

*json-1.7.4 (31 Jul 2012)

  31 Jul 2012; Hans de Graaff <graaff@gentoo.org> +json-1.7.4.ebuild:
  Version bump, fixing bug 428714.

  31 Jul 2012; Hans de Graaff <graaff@gentoo.org> -json-1.4.6.ebuild,
  -json-1.6.3.ebuild, -json-1.6.4.ebuild, -json-1.6.6.ebuild:
  Cleanup.

  25 Jul 2012; Anthony G. Basile <blueness@gentoo.org> json-1.5.4-r1.ebuild:
  Stable ppc64, bug #411507

  22 Jul 2012; <nixnut@gentoo.org> json-1.5.4-r1.ebuild:
  ppc stable #411507

  25 Jun 2012; Andreas Schuerch <nativemad@gentoo.org> json-1.5.4-r1.ebuild:
  x86 stable, see bug 411507

  27 May 2012; Markus Meier <maekke@gentoo.org> json-1.5.4-r1.ebuild:
  arm stable, bug #411507

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> json-1.5.4-r1.ebuild: