@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/json
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.102 2013/01/28 15:15:43 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.103 2013/02/11 19:17:42 graaff Exp $
+
+  11 Feb 2013; Hans de Graaff <graaff@gentoo.org> -json-1.5.4.ebuild,
+  -json-1.5.4-r1.ebuild, -json-1.7.4.ebuild, -json-1.7.5.ebuild:
+  Cleanup.
 
   28 Jan 2013; Alexis Ballier <aballier@gentoo.org> json-1.7.6.ebuild:
   keyword ~amd64-fbsd
